--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-window": "^1.8.6",
+    "video.js": "^7.11.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
