--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.2",
     "react-window": "^1.8.6",
     "video.js": "^7.11.4",
+    "videojs-mobile-ui": "^0.5.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
