--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-window": "^1.8.6",
+    "redux": "^4.1.0",
     "video.js": "^7.11.4",
     "videojs-mobile-ui": "^0.5.2",
     "web-vitals": "^1.1.0"
